data/derived/sp14/progs/unify/prog1399.ml.out
Characters 86-88:
  | Sine a -> sin(eval(a,x,y)*2.)
                              ^^
Error: This expression has type float but an expression was expected of type
         int
